Wed Aug  6 16:45:48 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* server/main.cpp: Added another signal handler so I can kill JAWS
	  when purifying. 

Mon Aug  4 00:07:24 1997  Nanbor Wang  <nw1@cumbia.cs.wustl.edu>

	* server/main.cpp (main): Service configurator now doesn't return
	  -1 when errors occur.  Therefore, we check for not success
	  instread of fail when opening the service contifurator.

Mon Jul 28 04:54:01 1997  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* server/Parse_Headers.cpp (place): Reformatted the same
	  stuff again...

Mon Jul 28 01:48:40 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* server/README: Updated the README file to reflect new features
	  and server flags.

	* server/Parse_Headers.cpp (place): Fixed a compile error found by
	  David Levine.  I don't know why this was compiling for me.

Sun Jul 27 21:56:12 1997  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* server/Parse_Headers.cpp (place): Reformatted a few things
	  to make them easier to read.

Fri Jul 25 02:05:20 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* server/HTTP_Server.cpp: Changes to allow the thread creation
	  flags to be specified from the command line.  Removed some code
	  that was used to track down memory leaks.

	* server/HTTP_Helpers.{h,cpp}: Added another method 
	  HTTP_date (char *), so that a buffer to which the date will be
	  written to can be passed into the HTTP_date routine.

	* server/HTTP_Response.cpp: Changed some code so that the baseline
	  implementation can be created at compile time.

	* server/IO.cpp: Changed some code so that the baseline
	  implementation can be created at compile time.

	* server/main.cpp: Changed the signal handler to wait for threads
	  to die.  However, this code will remain dormant for now, until
	  we design a nice way to shut down a thread pool.

	* server/svc.conf: Changes to add some other entries people can
	  try.

	* server/Makefile: Changes to allow JAWS to be built with static